Add SQLFluff configuration and update Super Linter workflow

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -32,3 +32,5 @@ jobs:
           # To report GitHub Actions status checks
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: true
+          VALIDATE_JSON_PRETTIER: false
+          SQLFLUFF_CONFIG_FILE: .sqlfluff
