--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
         "vscode": {
             "extensions": [
                 "mtxr.sqltools-driver-mysql",
-                "dorzey.vscode-sqlfluff"
+                "dorzey.vscode-sqlfluff",
+                "emeraldwalk.RunOnSave"
             ]
         }
     },
