--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,13 @@
     "editor.formatOnSave": true,
     "files.insertFinalNewline": true,
     "files.trimFinalNewlines": true,
-    "files.trimTrailingWhitespace": true
+    "files.trimTrailingWhitespace": true,
+    "emeraldwalk.runonsave": {
+        "commands": [
+            {
+                "match": "*.sql",
+                "cmd": "sqlfluff fix '${fileBasename}'"
+            }
+        ]
+    }
 }
