--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,7 @@ RUN apk add --no-cache bash git \
     python3 py3-pip
 
 # Install sqlfluff for SQL linting
-RUN ["/bin/bash", "-c", "pip3 --disable-pip-version-check --no-cache-dir install sqlfluff --break-system-packages"]
+RUN pip3 --disable-pip-version-check --no-cache-dir install sqlfluff --break-system-packages
 
 # Setup default user
 ARG USERNAME=vscode
