--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-    "editor.rulers": [
-        100
-    ],
+    "editor.rulers": [100],
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.formatOnSave": true,
@@ -9,8 +7,6 @@
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
     "triggerTaskOnSave.tasks": {
-        "Lint SQL File": [
-            "**/*.sql"
-        ]
-    },
+        "Lint SQL File": ["**/*.sql"]
+    }
 }
