--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,12 @@
 {
-    "editor.rulers": [
-        100
-    ],
+    "editor.rulers": [100],
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.formatOnSave": true,
     "files.insertFinalNewline": true,
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
-    "emeraldwalk.runonsave": {
-        "commands": [
-            {
-                "match": "*.sql",
-                "cmd": "sqlfluff fix '${fileBasename}'"
-            }
-        ]
+    "triggerTaskOnSave.tasks": {
+        "Lint SQL File": ["**/*.sql"]
     }
 }
